Adding Html Safe

--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -150,7 +150,7 @@
 	                    </p>
 
 
-	                           <p><%= sale.product_history %></p>
+	                           <p><%= sale.product_history.html_safe %></p>
 
 	                            <p>
 	                               
