--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -45,7 +45,7 @@ function submitFilter() {
         <%= link_to category.upcase, sales_url(:category_id => category_id) %>&#160;
         <% unless category_id == Sale.categories.size-1 %>|&#160;<% end %>
         <% if category_id == params[:category_id].to_i %></strong><% end %>
-      <% end %>
+      <% end %>&#160;|&#160;<a href="/photography">PHOTOGRAPHY</a>|&#160;<a href="/photography">SILICON LEGENDS</a>
     </span>
 
     <a href="/featured/new-stuff" class="faves-script btn btn-success">
