Adding Product_Specifics To Sale And Purchased_Sale

--- a/app/views/admin/sales/edit.html.erb
+++ b/app/views/admin/sales/edit.html.erb
@@ -84,6 +84,13 @@
                    </div>
                  </div>
 
+									<div class="control-group">
+                  <label class="control-label" for="sale_product_history">Product Specifics</label>
+                  <div class="controls">
+                    <%= text_area(:sale, :product_specifics, :rows => 10, :class => "input-xxlarge") %>
+                  </div>
+                </div>
+
                  <div class="control-group">
                    <label class="control-label" for="sale_category_id">Category</label>
                    <div class="controls">
