--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -587,6 +587,10 @@ function selectSize(size_id) {
                              <%= text_area_tag "product_history", params[:product_history], :rows => 10, :class => "span2" %>
                              <br><br>
 
+														<span class="add-on">Product Specifics</span>
+                             <%= text_area_tag "product_specifics", params[:product_specifics], :rows => 10, :class => "span2" %>
+                             <br><br>
+
 														<span class="add-on">Condition </span>
 			                       <%= text_field_tag "condition", params[:condition], :class => "span2" %>
 			                       <br><br>
