--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4252,7 +4252,7 @@ a.thumbnail:hover {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
-  border: solid;
+  border: solid thin;
 }
 .hero-unit h1 {
   margin-bottom: 0;
