--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -2,9 +2,9 @@
 <div class="row">
 	<div class="container">
 	  <div class="category-feed-detail well">
-	    <div class="back-button btn btn-success"><a href="/sales">Back</a></div>
+	    <div class="back-button ">
 
-	    <span class="category-feed-align">
+	   
 			<a href="/sales">HOME</a>&#160;/
 		        <% if sale.category_id == 0 %>
 						APPAREL
@@ -15,8 +15,8 @@
 						<% end %>	<% end %>	<% end %>	
 		        
 		    
-	    </span> 
-
+	  
+</div>
 	    <a href="/featured/new-stuff" class="faves-script-detail btn btn-success">
 	      What's New
 	    </a>
@@ -155,6 +155,7 @@
 
 
 	                           <p><%= raw sale.product_history %></p>
+															<p><%= raw sale.product_specifics if sale.product_specifics %></p>
 
 	                            <p>
 	                               
