--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4506,9 +4506,9 @@ a.thumbnail:hover {
   top: 50%;
   left: 50%;
   z-index: 1050;
-  width: 460px;
+  width: 660px;
   margin: -250px 0 0 -242px;
-  background-color: #ffffff;
+  background-color: #333;
   border: 1px solid #999;
   border: 1px solid rgba(0, 0, 0, 0.3);
   *border: 1px solid #999;
@@ -4551,7 +4551,7 @@ a.thumbnail:hover {
   overflow-y: auto;
   max-height: 400px;
   padding: 15px;
-  background-image: url('/assets/az_subtle.png');
+ color:#fff;
 }
 .modal-form {
   margin-bottom: 0;
