Company Filter Working

--- a/app/views/purchases/_cart.html.erb
+++ b/app/views/purchases/_cart.html.erb
@@ -2,7 +2,7 @@
  <div class="container">
      
       	<div class="category-feed-cart well">
-			    <div class="back-button btn btn-success"><a href="/sales">Back</a></div>
+			    <div class="back-button back-button-color btn btn-success"><a href="/sales">Back</a></div>
 
 			    <span class="category-feed-align">
 			      <% Sale.categories.each_with_index do |category, category_id| %>
