--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -70,6 +70,14 @@
     
     <%= yield %>
 
+	  
+		<div id="footer">
+		    <medium>
+	       <font color="#ffffff"> 
+		
+		<p>&copy;<%= link_to "Valydation 2013, All rights reserved.", "http://valydation.com" %> <u><a href="/page/tos">Terms of Service</a></u> and <u><a href="/page/privacy">Privacy Policy</a></u></p>
+	     </font> </medium>
+	    </div>
 
     <link href="/page/custom-css.css" media="screen" rel="stylesheet" type="text/css" />
 
