Fixing CSS Error

--- a/app/assets/stylesheets/jess.css
+++ b/app/assets/stylesheets/jess.css
@@ -1355,7 +1355,7 @@ font-size: 23px;
 .element.style {
 float: right;
 width: 720px;
-padding-right: 170px, 450px, 33, 15,;
+padding-right: 170px, 450px, 33, 15;
 font-family: Georgia, 'Times New Roman', Times, serif;
 font-size: 25px;
 line-height: 31px;
