Fixing Contact Email

--- a/app/views/pages/consignment.html.erb
+++ b/app/views/pages/consignment.html.erb
@@ -70,7 +70,7 @@ body {
   <fieldset>
 
     <label>Phone Number *</label>
-    <input name="subject" type="text" placeholder="Type here">
+    <input name="phone_number" type="text" placeholder="Type here">
   </fieldset>
   <label>Company and Product Description *</label>
   <textarea name="message" rows="8" class="span9"></textarea><br><br>
