Sales Group Change Plus MST Channel File

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -34,7 +34,7 @@
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
        </a>
-       <span class="brand">MySaleTable Admin</span>
+       <span class="brand">Valydation Admin</span>
        <div class="nav-collapse" id="main-menu">
         <ul class="nav" id="main-menu-left">
           <li><a href="/admin/users">Users</a></li>
