--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -48,6 +48,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
+						<%= form_tag(register_lead_url,
+				                 {:class => "form-search"}) do %>
+												<% if @error_message %>
+										    <div class="alert alert-error">  
+										      <%= @error_message %>
+										    </div>
+										    <% end %>
+				<input type="text" value="<%= params[:email] %>" id="email" name="email" class="input-block-level" placeholder="ENTER EMAIL"><button class="btn btn-small email-sign" type="submit" onclick="alert(document.getElementById('HiddenHear').innerHTML);">Submit</button>
+				<% end %><div id="HiddenHear" style="display:none">You're on the email list!</div>
           <center>
           <a class="brand" href="/sales">
             <%= image_tag 'valydation_logo.png', :height => 34, :width => 180 %>
@@ -66,7 +75,7 @@
         </div>
       </div>
     </div>
-
+	
     
     <%= yield %>
 
