--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -7,15 +7,15 @@
 	   
 			<a href="/sales">HOME</a>&#160;/
 		        <% if sale.category_id == 0 %>
-						APPAREL
+				<a href="/sales">APPAREL</a>
 						<% else %> 
 						<% if sale.category_id == 1 %>
-						CERAMIC & GLASS
+						<a href="/sales?category_id=1">CERAMIC & GLASS</a>
 						<% else %> 
 						 <% if sale.category_id == 2 %>
-						PROMOTIONAL
+						<a href="/sales?category_id=2">PROMOTIONAL</a>
 						<% end %>	<% end %>	<% end %>	
-		        
+		        / <%= sale.product.upcase %>
 		    
 	  </div>
 
@@ -158,7 +158,7 @@
 
 
 	                           <p><%= raw sale.product_history %></p>
-	<h3 class="menu_head">Product Condition</h3>
+	<h3 class="menu_head">Product Details</h3>
 															<p><%= raw sale.product_specifics if sale.product_specifics %></p>
 
 	                            <p>
