--- a/app/views/admin/sales/edit.html.erb
+++ b/app/views/admin/sales/edit.html.erb
@@ -91,6 +91,13 @@
                   </div>
                 </div>
 
+								<div class="control-group">
+                <label class="control-label" for="sale_product_condition">Product Condition</label>
+                <div class="controls">
+                  <%= text_area(:sale, :product_condition, :rows => 10, :class => "input-xxlarge") %>
+                </div>
+              </div>
+
                  <div class="control-group">
                    <label class="control-label" for="sale_category_id">Category</label>
                    <div class="controls">
