--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -10,7 +10,7 @@
 				<a href="/sales">APPAREL</a>
 						<% else %> 
 						<% if sale.category_id == 1 %>
-						<a href="/sales?category_id=1">CERAMIC & GLASS</a>
+						<a href="/sales?category_id=1">CERAMICS & GLASS</a>
 						<% else %> 
 						 <% if sale.category_id == 2 %>
 						<a href="/sales?category_id=2">PROMOTIONAL</a>
@@ -160,6 +160,10 @@
 	                           <p><%= raw sale.product_history %></p>
 	<h3 class="menu_head">Product Details</h3>
 															<p><%= raw sale.product_specifics if sale.product_specifics %></p>
+															
+															<h3 class="menu_head">Product Condition</h3>
+																													<p><%= raw sale.product_condition if sale.product_condition %></p>
+															
 
 	                            <p>
 	                               
