--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -6,7 +6,7 @@
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '327217574049864', // App ID
-      channelUrl : '//www.valydation.com/channel.html', // Channel File
+      channelUrl : '//www.mysaletable.com/channel.html', // Channel File
       status     : true, // check login status
       cookie     : true, // enable cookies to allow the server to access the session
       xfbml      : true  // parse XFBML
