--- a/app/views/shop_mailer/create_and_deliver_passwd_change.text.erb
+++ b/app/views/shop_mailer/create_and_deliver_passwd_change.text.erb
@@ -1,9 +1,14 @@
-Contact Form
+Forgot password
 
 From: "hi@valydation.com"
-Subject: <%= @subject %>
+
 
 Message:
 
-<%= @user %>
+Here is your new password:
 <%= @passwd_hash %>
+
+Click <a href="www.valydation.com">here</a> to sign in.
+
+
+- The /valydation Team
