Forgot Password Stuff w BCRypt Still Breaking

--- a/app/views/shop_mailer/create_and_deliver_passwd_change.html.erb
+++ b/app/views/shop_mailer/create_and_deliver_passwd_change.html.erb
@@ -1,14 +1,10 @@
-Forgot password
-
-From: "hi@valydation.com"
+<h3>Forgot password</h3>
 
 
-Message:
+<p>Here is your new password:</p>
+<p><%= @user.passwd_hash %></p>
 
-Here is your new password:
-<%= @passwd_hash %>
-
-Click <a href="www.valydation.com">here</a> to sign in.
+<p>Click <a href="www.valydation.com">here</a> to sign in.</p>
 
 
-- The /valydation Team
+<p>- The /valydation Team</p>
