--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -54,8 +54,18 @@ function validateAndSubmit() {
         alert("Your passwords don't match.");
         return false;
       }
-
-  
+			
+			 if ($("#first_name").val().length < 1) {
+			       alert("Please provide your first name.");
+			        return false;
+			      }
+			
+			      if ($("#last_name").val().length < 1) {
+			        alert("Please provide your last name.");
+			        return false;
+			      }
+			
+  	
 
       if ($("#zip_code").val().length != 5) {
         alert("Please provide your 5-digit zip code.");
