Comment Out Forgot Pwd And Patricia To Email

--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -55,7 +55,7 @@
 				<input type="text" value="<%= params[:email] %>" id="email_signup" name="email" class="input-block-level" placeholder="ENTER EMAIL"><button class="btn btn-small email-sign" type="submit" onclick="alert(document.getElementById('HiddenHear').innerHTML);">Submit</button>
 				<% end %><div id="HiddenHear" style="display:none">You're on the email list!</div>
           <center>
-          <a class="brand" href="/sales">
+          <a class="brand" href="/">
             <%= image_tag 'valydation_logo.png', :height => 34, :width => 180 %>
           </a>
         </center>
