--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -126,10 +126,11 @@
 	</form>                    </div>
  
 	                    <div class="additional-links">
-	             <ul>
-									<li class="italic-detail">	
+	            
+									<span class="italic-detail">	
 	                 Share this item
-											                     </li> &#160;&#160;
+											                     </span> 
+											 <ul style="padding-top: 8px;">
 	                 <li>																								<a href="<%= twitter_share_url(sale) %>">
 																			      <%= image_tag "twitter_32_icon.png", :height => 32, :width => 32 %>
 																			  &#160;&#160;  </a>
