Removing Store Name From Admin

--- a/app/views/admin/sale_groups/edit.html.erb
+++ b/app/views/admin/sale_groups/edit.html.erb
@@ -68,9 +68,9 @@
 <table class="table table-bordered table-striped table-hover">
   <thead>
     <tr>
-      <th>Store</th>
-      <th>City</th>
-      <th>Brand</th>
+      
+     
+      <th>Company</th>
       <th>Product</th>
       <th>Posted</th>
       <th>Featured</th>
@@ -80,14 +80,7 @@
   <tbody>
   <% @group.sales.each do |sale| %>
     <tr>
-      <td>
-        <%= sale.store_name %>
-      </td>
-      <td>
-        <% if sale.metro %>
-        <%= sale.metro.name %>
-        <% end %>
-      </td>
+     
       <td>
         <%= sale.brand %>
       </td>
