--- a/app/views/sales/group.html.erb
+++ b/app/views/sales/group.html.erb
@@ -6,9 +6,21 @@ body {
 
 <div class="container">
   <div class="category-feed well">
-    <center>
-      <font size="6" color="#432060"><%= @group.name %></font>
-    </center>
+    <div id="filter-button" class="filter-button"><a href="/sales">Home</a></div>
+
+    <span class="category-feed-align">
+      <% Sale.categories.each_with_index do |category, category_id| %>
+        <% if category_id == params[:category_id].to_i %><strong><% end %>
+        <%= link_to category.upcase, sales_url(:category_id => category_id) %>&#160;
+        <% unless category_id == Sale.categories.size-1 %>|&#160;<% end %>
+        <% if category_id == params[:category_id].to_i %></strong><% end %>
+      <% end %>&#160;|&#160;<a href="/page/photography">PHOTOGRAPHY</a>&#160;|&#160;<a href="/page/siliconlegends">SILICON LEGENDS</a>
+    </span>
+
+    <a href="/featured/new-stuff" class="faves-script btn btn-success">
+      What's New
+    </a>
+		
   </div>
 </div>
 
