--- a/app/views/pages/consignment.html.erb
+++ b/app/views/pages/consignment.html.erb
@@ -29,7 +29,7 @@ body {
   <div class="span2"></div>
   <div class="span8">
 <div class="contact-margin what-we-do">
-  <h3>Consignment</h3><br>
+  <h3>Tell us about your item</h3><br>
   <p class="about-us-text">Tell us what you'd like to sell.</p>
   <%= form_tag(consignment_url, :method => "post") do |f| %>
   <fieldset>
