--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -19,7 +19,7 @@ body {
         </tr>
       </thead>
       <tbody>
-      <% @purchased_sales.each do |p| %>
+      <% @purchases.each do |purchase| %>
         <tr>
         <td>
           <a href="#shippingModal" data-toggle="modal">
