--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -36,9 +36,9 @@ body {
         </legend>
 
       
-      	<%= link_to "Order Status", purchases_url, :class => "btn btn-success order-status-btn" %><br><br>
+      	<%= link_to "Order Status", purchases_url, :class => "btn btn-success order-status-btn" %><br>
 
-        <%= link_to "View Sales", user_custom_slug_url(@user), :class => "btn btn-success view-sales-btn" %>
+     
         <hr>
 
 
