--- a/app/views/admin/purchases/edit.html.erb
+++ b/app/views/admin/purchases/edit.html.erb
@@ -7,13 +7,13 @@
 
   <div style="float:right; padding: 24px;">
   <div style="padding:8px;">
-    <img src="<%= @purchase.sale.image_0.versions[:feed] %>">
+    <img src="<%= @purchase.sale.image_0.versions[:web_index] %>">
   </div>
   <div style="padding:8px;">
-    <img src="<%= @purchase.sale.image_1.versions[:feed] %>">
+    <img src="<%= @purchase.sale.image_1.versions[:web_index] %>">
   </div>
   <div style="padding:8px;">
-    <img src="<%= @purchase.sale.image_2.versions[:feed] %>">
+    <img src="<%= @purchase.sale.image_2.versions[:web_index] %>">
   </div>
 </div>
 
