--- a/app/views/admin/purchases/index.html.erb
+++ b/app/views/admin/purchases/index.html.erb
@@ -21,7 +21,7 @@
        
       </td>
       <td class="nowrap"></td>
-      <td><%= purchase.sale.product %></td>
+      <td><%= purchase.user_id %></td>
       <td class="nowrap"><%= purchase.created_at.strftime("%d %b %Y") %></td>
       <td><%= humanized_money_with_symbol purchase.total %></td>
       <td><%= purchase.retailer_status %></td>
