--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -168,7 +168,7 @@
 
 	                            <p>
 	                               
-	                                As with all Valydation pieces, this item is guaranteed by 
+	                                As with all /valydation pieces, this item is guaranteed by 
 	                                our promise of authenticity.
 	                            </p>
 	                        </div>
