--- a/app/views/purchases/products_email.html.erb
+++ b/app/views/purchases/products_email.html.erb
@@ -4,8 +4,9 @@ Order ID:<%= p.id %><br>
  Company: <%= h(p.brand) %><br>
  Product: <%= h(p.product) %><br>
  Size: <%= h(p.sizes) %><br>
-Subtotal:<%= p.subtotal %><br>
-Tax:<%= p.tax %><br>
-Total:<%= p.total %><br>
+
 <% end %>
   
+Subtotal:<%= purchase.subtotal %><br>
+Tax:<%= purchase.tax %><br>
+Total:<%= purchase.total %><br>
