Fixing Purchase Email Adding at Symbol

--- a/app/views/purchases/confirmation.html.erb
+++ b/app/views/purchases/confirmation.html.erb
@@ -11,7 +11,7 @@ body {
       <div class="span4">
         <div class="signup-unit">
           <center><p><font size="6">Congratulations!</font></p> 
-				<p><font size="5">You're unique piece of tech history has been processed. Look out for an email confirming the sale.</font></p>
+				<p><font size="5">Your unique piece of tech history has been processed. Look out for an email confirming the sale.</font></p>
             <a href="<%= root_url %>"><button class="btn-large btn-success">Back to Shopping</button></a></center>
           
         </div><!--end marketing -->		
