--- a/app/views/purchases/products_email.html.erb
+++ b/app/views/purchases/products_email.html.erb
@@ -1,4 +1,4 @@
-Order ID:<%= purchase.id %><br>
+Order ID:<%= @purchase.id %><br>
 <% purchased_sales.each do |p| %>
 Order ID:<%= p.id %><br>
 <%= h(p.image_0.versions[:web_index].to_s) %>
@@ -7,7 +7,7 @@ Order ID:<%= p.id %><br>
  Size: <%= h(p.sizes) %><br>
 
 <% end %>
-  
+
 Subtotal:<%= humanized_money_with_symbol @purchase.subtotal %><br>
 Tax:<%= humanized_money_with_symbol @purchase.tax %><br>
 Total:<%= humanized_money_with_symbol @purchase.total %><br>
