Adding ID in Purchase

--- a/app/views/purchases/products_email.html.erb
+++ b/app/views/purchases/products_email.html.erb
@@ -1,4 +1,7 @@
-Order ID:<%= @purchase.id %><br>
+<% purchases.each do |p| %>
+Order ID:<%= p.id %><br>
+<% end %>
+
 <% purchased_sales.each do |p| %>
 Order ID:<%= p.id %><br>
 <%= h(p.image_0.versions[:web_index].to_s) %>
