Removing Purchase Id

--- a/app/views/purchases/products_email.html.erb
+++ b/app/views/purchases/products_email.html.erb
@@ -1,5 +1,5 @@
-<% purchases.each do |p| %>
-Order ID:<%= p.id %><br>
+<% @purchases.each do |purchase| %>
+Order ID:<%= purchase.id %><br>
 <% end %>
 
 <% purchased_sales.each do |p| %>
