--- a/app/views/purchases/products_email.html.erb
+++ b/app/views/purchases/products_email.html.erb
@@ -2,7 +2,7 @@
 
 <% purchased_sales.each do |p| %>
 
-<%= h(p.image_0.versions[:web_index].to_s) %>
+<%= h(p.image_0.to_s) %>
  Company: <%= h(p.brand) %><br>
  Product: <%= h(p.product) %><br>
  Size: <%= h(p.sizes) %><br>
