--- a/app/views/purchases/products_email.html.erb
+++ b/app/views/purchases/products_email.html.erb
@@ -1,11 +1,14 @@
 
 
 <% purchased_sales.each do |p| %>
-
-<%= h(p.image_0.to_s) %>
+Order ID: <%= p.purchase_id %><br>
+Link to Product Image: <%= h(p.image_0.to_s) %><br>
  Company: <%= h(p.brand) %><br>
  Product: <%= h(p.product) %><br>
- Size: <%= h(p.sizes) %><br>
-
+ Size: <%= h(p.size) %><br>
+ Shipping: <%= p.display_address %>
+Shipping: <%= p.subtotal %>
+Shipping: <%= p.tax %>
+Shipping: <%= p.total %>
 <% end %>
 
