Another Stab at Email Vars

--- a/app/views/purchases/products_email.html.erb
+++ b/app/views/purchases/products_email.html.erb
@@ -2,11 +2,15 @@
 
 <% purchased_sales.each do |p| %>
 Order ID: <%= p.purchase_id %><br>
-Link to Product Image: <%= h(p.image_0.to_s) %><br>
  Company: <%= h(p.brand) %><br>
  Product: <%= h(p.product) %><br>
  Size: <%= h(p.size) %><br>
- Shipping: <%= p.display_address %>
+ Shipping Address: <%= p.address %><br>
+<%= p.address_2 %><br>
+<%= p.city %>, <%= p.state %><br>
+<%= p.zip %><br>
+<%= humanized_money_with_symbol p.orig_price %><br>
+<%= humanized_money_with_symbol p.tax_cents %><br>
 
 <% end %>
 
