--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -40,7 +40,7 @@ function toggleAddress() {
       <hr>
       <p>
       
-     Shipping within the continental U.S. is free
+     Shipping within the Continental U.S. is free
       </p>
 
      
