--- a/app/views/purchases/_cart.html.erb
+++ b/app/views/purchases/_cart.html.erb
@@ -73,14 +73,13 @@ Your cart is empty!
 <div class="summary-title">Order Summary</div>
 <div class="summary-totals-container" style=""><dl>
 	
-  <dt class="subtotal">Subtotal:</dt>
-  <dd class="subtotal"><%= humanized_money_with_symbol @cart.items.sum(&:orig_price) %></dd>
+  
   <dt>	Shipping:</dt>
   <dd class="free">FREE</dd>
 </dl>
 
 <dl class="total">
-  <dt>Total:</dt>
+  <dt>Subtotal:</dt>
   <dd><%= humanized_money_with_symbol @cart.items.sum(&:orig_price) %></dd>
 </dl></div>
 <div class="checkout-button">
