--- a/app/views/purchases/products_email.html.erb
+++ b/app/views/purchases/products_email.html.erb
@@ -11,7 +11,7 @@ Order ID: <%= p.purchase_id %><br>
 
 <% end %>
 
- Shipping Address: <%= @purchases.address %><br>
+ Shipping Address: <%= @purchase.address %><br>
 <%= @purchase.address_2 %><br>
 <%= @purchase.city %>, <%= @purchase.state %><br>
 <%= @purchass.zip %><br>
