Purchase Do on Email

--- a/app/views/purchases/products_email.html.erb
+++ b/app/views/purchases/products_email.html.erb
@@ -11,7 +11,9 @@ Order ID: <%= p.purchase_id %><br>
 
 <% end %>
 
- Shipping Address: <%= @purchase.address %><br>
-<%= @purchase.address_2 %><br>
-<%= @purchase.city %>, <%= @purchase.state %><br>
-<%= @purchass.zip %><br>
+<% purchases.each do |p| %>
+ Shipping Address: <%= p.address %><br>
+<%= p.address_2 %><br>
+<%= p.city %>, <%= @purchase.state %><br>
+<%= p.zip %><br>
+<% end %>
