Email Variable Change

--- a/app/views/purchases/products_email.html.erb
+++ b/app/views/purchases/products_email.html.erb
@@ -5,13 +5,13 @@ Order ID: <%= p.purchase_id %><br>
  Company: <%= h(p.brand) %><br>
  Product: <%= h(p.product) %><br>
  Size: <%= h(p.size) %><br>
-
-<%= humanized_money_with_symbol p.orig_price %><br>
-<%= humanized_money_with_symbol p.tax_cents %><br>
+ Cost: <%= h(p.orig_price) %><br>
 
 <% end %>
 
-
+Subtotal:<%= humanized_money_with_symbol @purchase.subtotal_cents %><br>
+Tax:<%= humanized_money_with_symbol @purchase.tax_cents %><br>
+Total: <%= humanized_money_with_symbol @purchase.total_cents %>
  Shipping Address: <%= @purchase.address if @purchase.address %><br>
 <%= @purchase.address_2 if @purchase.address_2 %><br>
 <%= @purchase.city if @purchase.city %>, <%= @purchase.state if @purchase.state %><br>
