--- a/app/views/purchases/products_email.html.erb
+++ b/app/views/purchases/products_email.html.erb
@@ -7,8 +7,10 @@ Order ID: <%= p.purchase_id %><br>
  Size: <%= h(p.size) %><br>
 
 <% end %>
-
-Shipping Address: <%= purchase.address if purchase.address %><br>
-<%= purchase.address_2 if purchase.address_2 %><br>
+Subtotal: <%= purchase.subtotal_cents if purchase.subtotal_cents %><br>
+Shipping: <%= humanized_money_with_symbol purchase.shipping_cents if purchase.shipping_cents %><br>
+Tax: <%= purchase.tax_cents if purchase.tax_cents %><br>
+Total: <%= purchase.total_cents if purchase.total_cents %><br>
+Shipping Address: <%= purchase.address if purchase.address %> <%= purchase.address_2 if purchase.address_2 %><br>
 <%= purchase.city if purchase.city %>, <%= purchase.state if purchase.state %><br>
 <%= purchase.zip if purchase.zip %><br>
